# DeepAgentsDemo

./: .env  .gitignore  AGENT.md  main.py  mongodb_store.py  pyproject.toml
app/: __init__.py
app/agents/: __init__.py  factory.py  registry.py  tools.py
app/api/: router.py
app/api/routes/: chat.py
app/api/schemas/: __init__.py
app/api/schemas/jarvis/: __init__.py  chat.py
app/core/: __init__.py  config.py  prompts.py
app/infrastructure/: checkpointer.py  deepagents_backend.py  mongo_store.py
app/services/: chat_service.py
