[project]
name = "deepagentsdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.8",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.25",
    "uvicorn>=0.49.0",
]
