[project]
name = "deepagentsdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.10",
    "python-dotenv>=1.2.2",
    "fastapi>=0.136.3",
    "langchain-openai>=1.3.2",
    "langgraph-store-mongodb>=0.3.0",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "uvicorn>=0.38.0",
]
